# comfyui-sdnq-splited

./: 1024_fixed_size_issue_explanation.md  ASSESSMENT.md  CREDITS.md  LORA_LOADER_COMPARISON_EN.md  LORA_LOADER_COMPARISON_JP.md  README.md  TECHNICAL_I2I_DENOISE_COMPARISON.md  __init__.py  context.md  install.py  pyproject.toml  requirements-optional.txt  requirements.txt  test_negative_prompt_fix.py  test_performance_optimizations.py
.github/workflows/: publish_action.yml
backup/: model_loader_backup_20251215_152540.py  sampler.py  sampler.py.backup  sampler_cfg_fusion_backup.py  samplerv2_STABLE_20251215_224759.py  vae_encode_STABLE_20251215_224759.py
core/: __init__.py  config.py  downloader.py  registry.py  wrapper.py
jsons/: F2 i2i.json  F2 t2i.json  torch_compile.json
md/: CLAUDE.md  COMPARISON_TABLE.md  PERFORMANCE_OPTIMIZATION_RESEARCH.md  RESEARCH_NOTES.md  SCHEDULER_RESEARCH.md  SDNQ_ComfyUI_Development_Plan.md  STANDALONE_SAMPLER_PLAN.md  STATUS.md  UX_IMPROVEMENTS_RESEARCH.md  WEIGHT_STREAMING.md  context.md
nodes/: __init__.py  attention_processor_optimized.py  catalog.py  flux2samplerv2.py  loader.py  lora_loader.py  model_loader.py  quantizer.py  sampler.py  sampler.py.backup  sampler_cfg_fusion_backup.py  samplerv2.py  samplerv2.py.backup  samplerv2.py.backup_cfg_skip  samplerv2_backup_20251215_103501.py  samplerv2_backup_20251215_152540.py  torch_compile_flux.py
tools/: apology_10000.txt  count_chars.py  sdnq_restore_stable.ps1
