[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-sdnq"
version = "0.1.0"
description = "ComfyUI custom node pack for loading SDNQ quantized models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ComfyUI-SDNQ Contributors"}
]
keywords = [
    "comfyui",
    "sdnq",
    "quantization",
    "stable-diffusion",
    "flux",
    "diffusers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "accelerate>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/EnragedAntelope/comfyui-sdnq"
Repository = "https://github.com/EnragedAntelope/comfyui-sdnq"
Issues = "https://github.com/EnragedAntelope/comfyui-sdnq/issues"
"SDNQ Repository" = "https://github.com/Disty0/sdnq"
"Pre-quantized Models" = "https://huggingface.co/collections/Disty0/sdnq"

[tool.setuptools]
packages = ["nodes", "core"]
