[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-sdnq-splited"
version = "1.0.2"
description = "ComfyUI custom node pack for SDNQ quantized models with a modular split-node architecture. Forked from EnragedAntelope/comfyui-sdnq and redesigned into dedicated nodes. Provides 5 dedicated nodes: SDNQ Model Loader, SDNQ LoRA Loader, SDNQ VAE Encode, SDNQ Sampler V2 (general models), and Flux2 SDNQ Sampler V2 (Flux2-optimized). Enables 50-75% VRAM savings while maintaining quality. Note: Currently focused on FLUX.2 development; other models not tested."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ComfyUI-SDNQ Contributors"}
]
keywords = [
    "comfyui",
    "sdnq",
    "quantization",
    "stable-diffusion",
    "flux",
    "diffusers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "accelerate>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/ussoewwin/comfyui-sdnq-splited"
Repository = "https://github.com/ussoewwin/comfyui-sdnq-splited"
Issues = "https://github.com/ussoewwin/comfyui-sdnq-splited/issues"
"SDNQ Repository" = "https://github.com/Disty0/sdnq"
"Pre-quantized Models" = "https://huggingface.co/collections/Disty0/sdnq"

[tool.comfy]
PublisherId = "ussoewwin"
DisplayName = "comfyui-sdnq-splited"
Icon = "https://raw.githubusercontent.com/ussoewwin/comfyui-sdnq-splited/main/logo-transparent.png"
categories = ["loaders", "sampling"]
tags = ["sdnq", "quantization", "low-vram", "diffusers", "flux", "flux2", "flow-matching", "modular", "lora", "vae", "sampler"]

[tool.setuptools]
packages = ["nodes", "core"]
